// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MDropdown should render correctly 1`] = `
<div class="m-dropdown" style="width:100%;max-width:288px;">
    <div class="m-input-style m--has-cursor-pointer m--is-tag-default" style="width:100%;">
        <div class="m-input-style__body">
            <div class="m-input-style__body__left">
                <input type="text" id="mDropdown-uuid" aria-haspopup="true" aria-controls="mDropdown-uuid-controls" readonly="readonly" value="" class="m-dropdown__input"> </div>
            <div class="m-input-style__body__right">
                <div class="m-dropdown__arrow">
                    <svg aria-hidden="true" width="1em" height="1em" button-size="18px" icon-size="16px" class="m-icon m-dropdown__arrow__icon">
                        <use aria-hidden="true"></use>
                    </svg>
                </div>
            </div>
        </div>
    </div>
    <div class="m-validation-message">
        <m-accordion-transition transition="true"></m-accordion-transition>
    </div>
    <div class="m-popup">
        <div class="m-popper"> </div>
    </div>
</div>
`;

exports[`MDropdown should render correctly when placeholder is set 1`] = `
<div class="m-dropdown" style="width:100%;max-width:288px;">
    <div class="m-input-style m--has-cursor-pointer m--is-tag-default" style="width:100%;">
        <div class="m-input-style__body">
            <div class="m-input-style__body__left">
                <input type="text" id="mDropdown-uuid" aria-haspopup="true" aria-controls="mDropdown-uuid-controls" readonly="readonly" placeholder="placeholder test" value="" class="m-dropdown__input"> </div>
            <div class="m-input-style__body__right">
                <div class="m-dropdown__arrow">
                    <svg aria-hidden="true" width="1em" height="1em" button-size="18px" icon-size="16px" class="m-icon m-dropdown__arrow__icon">
                        <use aria-hidden="true"></use>
                    </svg>
                </div>
            </div>
        </div>
    </div>
    <div class="m-validation-message">
        <m-accordion-transition transition="true"></m-accordion-transition>
    </div>
    <div class="m-popup">
        <div class="m-popper"> </div>
    </div>
</div>
`;
